--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,18 @@ header {
 #shelf div {
     background-color: rgb(170, 185, 185);
     width: 200px;
+    border-radius: 10px;
     padding: 0.5rem;
     margin: 1rem;
+}
+
+#shelf button {
+    color: white;
+    background-color: rgba(0, 0, 0, 0.238);
+    font-weight: bold;
+    width: 2rem;
+    border-radius: 5px;
+    border-style: none;
+    cursor: pointer;
+    float: right;
 }
