--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ html::-webkit-scrollbar {
 
 header {
     text-align: center;
-    font-size: 1.8rem;
+    font-size: 2rem;
     color: #b1d86e;
 }
 
@@ -41,6 +41,7 @@ main {
     border: none;
     border-radius: 50%;
     color: #9eb675ee;
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.409);
     font-size: 3rem;
     display: flex;
     justify-content: center;
@@ -57,8 +58,10 @@ main {
 #shelf div {
     background: linear-gradient(#588157, #1A5031, #0C2C1C);
     color: #bed29bee;
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.409);
+    font-size: 1.5rem;
     font-weight: bold;
-    width: 200px;
+    width: 300px;
     border-radius: 10px;
     padding: 1.5rem;
     margin: 1rem;
@@ -66,11 +69,12 @@ main {
 
 #shelf button {
     color: #c3d6a2ee;
-    background-color: rgba(0, 0, 0, 0.396);
+    box-shadow: 0px 0px 20px #c3d6a232;
+    background-color: rgba(0, 0, 0, 0.103);
     font-weight: bold;
     width: 2rem;
     height: 2rem;
-    border-radius: 5px;
+    border-radius: 25%;
     border-style: none;
     cursor: pointer;
     float: right;
