--- a/styles.css
+++ b/styles.css
@@ -72,10 +72,25 @@ main {
     box-shadow: 0px 0px 20px #c3d6a232;
     background-color: rgba(0, 0, 0, 0.103);
     font-weight: bold;
+    font-size: 1.2rem;
     width: 2rem;
     height: 2rem;
     border-radius: 25%;
     border-style: none;
     cursor: pointer;
     float: right;
+}
+
+:modal {
+    color: #bed29bee;
+    background-color: #588157;
+    padding: 1rem;
+    border-radius: 10px;
+}
+
+:modal button, select {
+    color: #588157;
+    background-color: #0c2c1c;
+    border: none;
+    border-radius: 5px;
 }
