--- a/styles.css
+++ b/styles.css
@@ -86,11 +86,23 @@ main {
     background-color: #588157;
     padding: 1rem;
     border-radius: 10px;
+    font-weight: bold;
 }
 
 :modal button, select {
     color: #588157;
     background-color: #0c2c1c;
+    font-weight: bold;
     border: none;
     border-radius: 5px;
+    margin-bottom: 1rem;
+}
+
+:modal input {
+    background-color: #bed29bee;
+    border-radius: 2px;
+    color: #0c2c1c;
+    border: none;
+    font-weight: bold;
+    margin-bottom: 1rem;
 }
