--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 :root {
-    font-family: Roboto, Helvetica, Arial, sans-serif;
+    font-family: "Playfair Display", serif;
 }
 
 html, body {
@@ -17,8 +17,8 @@ html::-webkit-scrollbar {
 }
 
 #logo {
-    width: 250px;
-    margin-bottom: -6rem;
+    width: 100px;
+    margin-bottom: -5rem;
 }
 
 header {
@@ -73,7 +73,8 @@ main {
 }
 
 #shelf button {
-    padding: 5px 15px;
+    padding: 0px 15px 3px 15px;
+    font-family: "Playfair Display", serif;
     font-weight: bold;
     font-size: 1.2rem;
     border-radius: 10px;
@@ -106,6 +107,7 @@ main {
 :modal button, select {
     color: #588157;
     background-color: #0c2c1c;
+    font-family: "Playfair Display", serif;
     font-weight: bold;
     border: none;
     border-radius: 5px;
