--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,11 @@ main {
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    transition: all 0.2s ease;
+}
+
+#add:hover {
+    transform: scale(1.2);
 }
 
 #shelf {
@@ -71,6 +76,11 @@ main {
     border-radius: 10px;
     padding: 1.5rem;
     margin: 1rem;
+    transition: all 0.4s ease;
+}
+
+#shelf div:hover {
+    transform: scale(1.05);
 }
 
 #shelf button {
@@ -81,6 +91,7 @@ main {
     border-radius: 10px;
     border: none;
     cursor: pointer;
+    transition: all 0.1s ease;
 }
 
 .rButton {
@@ -90,11 +101,20 @@ main {
     margin-left: 5px;
 }
 
+.rButton:hover {
+    transform: scale(1.08);
+}
+
 .remove {
     float: right;
     box-shadow: 0px 0px 20px #c3d6a232;
     color: #c3d6a2ee;
     background-color: rgba(0, 0, 0, 0.103);
+    transition: all 0.1s ease;
+}
+
+.remove:hover {
+    transform: scale(1.1);
 }
 
 :modal {
